# MP2Labs

./: CMakeCache.txt  CMakeLists.txt
Postfix/: PostfixMain.cpp
Postfixlib/: Postfix.h
Postfixtest/: Postfix_test.cpp
Project1/: Project1.vcxproj
QueueVisualInterface/: MainForm.cpp  MainForm.h  QueueForm.cpp  QueueForm.h  QueueVisualInterface.vcxproj  QueueVisualInterface.vcxproj.filters  TQueue.h  TextBoxFilters.h
QueueVisualInterface/x64/Debug/: QueueVisualInterface.exe.recipe  QueueVisualInterface.vcxproj.FileListAbsolute.txt  QueueVisualInterface.vcxproj.GenerateResource.cache  VisualQueue.exe.recipe  VisualQueue.vcxproj.FileListAbsolute.txt
QueueVisualInterface/x64/Debug/QueueVis.E0987A18.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  ResGen.command.1.tlog  ResGen.read.1.tlog  ResGen.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
QueueVisualInterface/x64/Debug/VisualQueue.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  ResGen.command.1.tlog  ResGen.read.1.tlog  ResGen.write.1.tlog  VisualQueue.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
TMatrix/: TMatrixMain.cpp
TMatrixlib/: TMatrix.h
TMatrixtest/: test_main.cpp  test_tmatrix.cpp  test_tvector.cpp
TPolinom/: main.cpp
TPolinomlib/: THeadList.h  TList.h  TMonomial.h  TPolynomial.h
TQueue/: TQueueMain.cpp
TQueuelib/: TQueue.h
TStacklib/: TStack.h
TStacktest/: TStack_test.cpp
